[package]
name = "ch1115"
version = "0.1.0"
edition = "2024"

[dependencies]
display-interface = "0.5.0"
embedded-graphics-core = { version = "0.4.1", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
default = []
async = ["dep:embedded-hal-async"]
graphics = ["dep:embedded-graphics-core"]
