[package]
name = "ch1115"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A no_std driver for the CH1115 monochrome display"
readme = "README.md"
repository = "https://github.com/Matt-DESTROYER/ch1115"
keywords = ["embedded", "driver", "graphics", "ch1115"]
categories = ["embedded"]

[dependencies]
display-interface = "0.5.0"
embedded-graphics-core = { version = "0.4.1", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
default = []
async = ["dep:embedded-hal-async"]
graphics = ["dep:embedded-graphics-core"]
